# rostamianprojectsinc

./: .gitignore  CMakeLists.txt  README.md
array/: array.h  hilbert_matrix.c  hilbert_matrix.h
finite-differences/: demo1.c  demo2.c  demo3.c  demo4.c  heat-solve.c  heat-solve.h
nelder-mead/: demo-energy.c  demo2D.c  nelder-mead.c  nelder-mead.h
neuralnet/: demo-ode1.c  neural-net-ode.c  neural-net-ode.h  neural-nets-ode.c
neuralnet-ode/: neural-nets-ode.c  neural-nets-ode.h
neuralnet-pde/: demo-L-shaped-fragment.c  demo-square-with-hole-fragment.c  demo-square.c  neural-nets-pde.c  neural-nets-pde.h
pme-solve/: demo1.c  demo2.c  pme-solve.c  pme-solve.h
vertices/: rank-vertices-demo.c  rank-vertices.h
xmalloc/: xmalloc-demo-1.c  xmalloc-demo-2.c  xmalloc-test  xmalloc-test-2  xmalloc.c  xmalloc.h
